gtk/sass/3.20/_3rd-party.scss
/* ... */
// MPRIS Applet
.raven-mpris {
  border: none;
  color: $fg_color;
  background-color: gtkopacity($dark_color, 0.9);

  button.image-button { padding: rem(8px); }
}

// notifications
.budgie-notification-window {
  border-radius: 2px;
  background: none;
}

.budgie-notification {
  &.background { border-radius: 2px; }

  .notification-title {
    color: $secondary_fg_color;
    font-size: 110%;
    font-weight: 500;
  }

  .notification-body { color: $fg_color; }
}

// run-dialog styling
.background.csd.budgie-run-dialog {
  border: none;
  background-color: transparent;

  decoration {
    border-radius: 2px; // hard-coded 6px is ugly...
    border: none;
    background-color: gtkopacity($inverted_dark_color, 0.9);

    headerbar { border-radius: 2px; }
  }

  scrolledwindow {      // FIXME: using GtkEntry style-class!?
    border-image: none; // remove underline indicator
    background-color: transparent;

    list {
      background-color: transparent;

      row,
      row.activatable {
        background-color: transparent;
        color: $inverted_fg_color;
        transition: none;
      }
    }

    undershoot { // remove undershoot
      &.top,
      &.bottom,
      &.left,
      &.right { background-image: none; }
    }
  }

  // hide weird separator
  box > box > separator {
    border: 0 none transparent;
    color: transparent;
    background-color: transparent;
  }

  box > box {
    entry {
      color: $inverted_fg_color;
      caret-color: $inverted_fg_color;
      &:focus {
        color: $selected_fg_color;
        caret-color: $selected_fg_color;
      }
      &:disabled { color: $insensitive_inverted_fg_color; }

      image {
        &:not(:hover):not(:active) { color: $inverted_fg_color; }
        &:active { color: $selected_bg_color; }
        &:disabled { color: $insensitive_inverted_fg_color; }
      }
    }
  }

  scrollbar {
    border: none;
    background: none;

    slider {
      background-color: gtkopacity($inverted_tertiary_fg_color, 0.55);
      &:hover {
        background-color: gtkopacity($inverted_secondary_fg_color, 0.55);
      }
      &:active { background-color: $inverted_fg_color; }
      &:disabled { opacity: 0.4; }
    }
  }

  // 'close' button
  button.image-button {
    color: $secondary_accent_color;
    &:hover,
    &:active,
    &:checked { color: $accent_color; }
    &:disabled { color: gtkopacity($accent_color, 0.4); }
  }
}

// session-dialog and polkit-dialog styling
.budgie-session-dialog,
.budgie-polkit-dialog {
  border-radius: 2px;
  border-width: 0;
  // Always use dark-color of dark variant
  background-color: $inverted_bg_color;
  color: $inverted_fg_color;
  font-weight: 700;
  opacity: 0.9;

  decoration { // composite with drop-shadows
    border-radius: 2px;
    box-shadow: $z-depth-4;
    &:backdrop {
      box-shadow: $z-depth-2-backdrop;
      transition: none;
    }
  }

  button,
  .linked > button {
    @extend %button_flat_normal;
    padding: rem(9.3px) rem(13.3px) rem(10.7px);
    border: 2px solid transparent;
    border-radius: 0;
    color: $secondary_accent_color;
    background-color: transparent;
    background-size: $text_button_small;
    &:hover {
      @extend %button_flat_hover;
      background-color: transparent;
      color: $accent_color;
    }
    &:active {
      @extend %button_flat_active;
      background-color: transparent;
      color: $accent_color;
    }
    &:checked {
      @extend %button_flat_checked;
      background-color: transparent;
      color: $secondary_accent_color;
    }
    &:disabled { @include button(flat-insensitive); }

    &:first-child {
      border-radius: 0 0 0 2px;
      border-right-width: 0;
    }
    &:last-child {
      border-radius: 0 0 2px 0;
      border-left-width: 0;
    }
  }

  // polkit-dialog specific styling
  &:not(.budgie-session-dialog) {
    .message { color: $secondary_fg_color; }
    .failure {
      color: $accent_color;
      font-weight: 700;
    }
  }
}

// misc settings
.drop-shadow {
  background-color: $dark_color;
  background-image: none;
  box-shadow: $z-depth-2;
}


/************
 * Corebird *
 ************/

// use normal foreground colour
stack button.profile-button {
  &:checked { color: $fg_color; }
}

headerbar.titlebar box {
  button.toggle.account-button { // left-most account-button
    min-width: rem(13.3px);
    min-height: rem(13.3px);
    // it doesn't work
    padding: rem(6.7px) rem(10px) rem(6.7px);
    // revert to square button since we can't make perfect circle button
    border-radius: 2px;
    -gtk-outline-radius: 2px;

    // it doesn't work
    .avatar-round { border-color: transparent; }
  }

  button.image-button.toggle { // tweet button
    min-width: rem(13.3px);
    min-height: rem(13.3px);
    padding: rem(6.7px) rem(10px) rem(6.7px);
  }
}


/********
 * Nemo *
 ********/

.nemo-desktop.nemo-canvas-item {
  @extend .nautilus-desktop.nautilus-canvas-item;
}
/* ... */

